<resources>
    <string name="app_name">Courscyclopedia</string>
    <string name="default_web_client_id">605909852626-59tek0jsp2bjsro1p9j73sl017ahnnms.apps.googleusercontent.com</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading..</string>
    <string name="logout">Logout</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_code">subject_code</string>
    <string name="subject_name">subject_name</string>
    <string name="subject_description">subject_description</string>
    <string name="campus">campus</string>
    <string name="credit">credit</string>
    <string name="add_subject">Add Subject</string>

    <string name="item_fragment_image">Faculty Image</string>
    <string name="fragment_choose_faculty">Discover Faculties</string>
    <string name="fragment_info">Choose one time and your faculty will be permenant.</string>

    <string name="fragment_choose_subject">Subjects Offered</string>
    <string name="delete_subject">Delete Subject</string>
    <string name="welcome_user">Welcome, %1$s!</string>


    <string name="like">Like</string>
    <string name="wishlist">Wishlist</string>

</resources>