<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextSubjectCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_code"
            android:inputType="text"
            android:autofillHints="subject_code" />

        <EditText
            android:id="@+id/editTextSubjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_name"
            android:inputType="text"
            android:autofillHints="subject_name" />

        <EditText
            android:id="@+id/editTextSubjectDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:autofillHints="subject_description" />

        <Spinner
            android:id="@+id/spinnerMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/editTextCampus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campus"
            android:inputType="text"
            android:autofillHints="campus" />

        <EditText
            android:id="@+id/editTextCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/credit"
            android:inputType="number"
            android:autofillHints="credit" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
